--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "generate-password": "^1.4.1",
     "hbs": "^4.0.3",
     "random-word-by-length": "^0.1.0",
     "randomstring": "^1.1.5",
-    "strong-password-generator": "^1.0.6"
+    "strong-password-generator": "^1.0.6",
+    "sweetalert": "^2.1.2"
   }
 }
