--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt": "latest",
     "body-parser": "^1.18.3",
+    "cookie-session": "^1.3.3",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "generate-password": "^1.4.1",
     "hbs": "^4.0.3",
+    "mongodb": "latest",
     "random-word-by-length": "^0.1.0",
     "randomstring": "^1.1.5",
     "strong-password-generator": "^1.0.6",
