--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "axios": "^0.18.0",
     "bcrypt": "latest",
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "generate-password": "^1.4.1",
     "hbs": "^4.0.3",
     "mongodb": "latest",
+    "node-session": "^1.2.1",
     "random-word-by-length": "^0.1.0",
     "randomstring": "^1.1.5",
     "strong-password-generator": "^1.0.6",
