--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
-    "bcrypt": "latest",
+    "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
@@ -18,8 +18,8 @@
     "express-session": "^1.15.6",
     "generate-password": "^1.4.1",
     "hbs": "^4.0.3",
-    "mongodb-utils": "^1.1.6",
     "mongodb": "latest",
+    "mongodb-utils": "^1.1.6",
     "node-session": "^1.2.1",
     "random-word-by-length": "^0.1.0",
     "randomstring": "^1.1.5",
